# ECGViewer

./: .gitignore  BUILD_WINDOWS.md  LICENSE  README.md  main.py  requirements.txt
.github/workflows/: ecg-ci.yml
ECGViewer/: CMakeLists.txt  __init__.py  build.bash  build.bat
ECGViewer/include/ECGViewer/: ECGViewer.hpp
ECGViewer/include/plotter/: ECGViewer.hpp
ECGViewer/src/: ECGModule.cpp  ECGViewerAnnotations.cpp  ECGViewerInteractions.cpp  ECGViewerPlot.cpp  ECGViewerSetup.cpp  EcgQtModule.cpp  ParseEcg.cpp  qcustomplot.cpp
ci/: Dockerfile
converting_public_dataset/: convert_ltstdb_to_txt.py  getData.bash
docker/: Dockerfile  build_and_run.bash  requirements.txt
ecg_analysis/: __init__.py  ecg_gui.py  plotter.py  plotter_cpp.py  plotter_mpl.py  test_file_parsing.py  utils.py
ecg_analysis/gui/: __init__.py  launcher.py  launcher_help.py  launcher_layout.py  launcher_styles.py  launcher_worker.py  worker.py
plotter/: CMakeLists.txt  build.bash  build_executable.bash  ecg_gui.py  ecg_gui.py.lprof  main.py  plotter.py  test_file_parsing.py  utils.py
plotter/include/plotter/: ECGViewer.hpp  EcgQtViewer.hpp
plotter/src/: ECGModule.cpp  ECGViewerAnnotations.cpp  ECGViewerInteractions.cpp  ECGViewerPlot.cpp  ECGViewerSetup.cpp  EcgQtModule.cpp  EcgQtViewer.cpp  ParseEcg.cpp
tests/: test_algorithms.py  test_end_to_end_ncx.py  test_launcher.py  test_parse_ecg.py  test_worker.py
